--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,35 @@
+<mat-sidenav-container fullscreen>
 
+    <mat-sidenav #sidenav>
+        <mat-nav-list (click)="sidenav.close()">
+            <a mat-list-item routerLink="/">
+                <mat-icon>library_books</mat-icon>
+                <span>Courses</span>
+            </a>
+            <a mat-list-item routerLink="about">
+                <mat-icon>question_answer</mat-icon>
+                <span>About</span>
+            </a>
+            <a mat-list-item >
+                <mat-icon>person_add</mat-icon>
+                <span>Register</span>
+            </a>
+            <a mat-list-item >
+                <mat-icon>account_cirle</mat-icon>
+                <span>Login</span>
+            </a>
 
+        </mat-nav-list>
+
+    </mat-sidenav>
+
+    <mat-toolbar color="primary" (click)="sidenav.open()">
+        <button mat-icon-button>
+            <mat-icon>menu</mat-icon>
+        </button>
+
+    </mat-toolbar>
+
+    <router-outlet></router-outlet>
+
+</mat-sidenav-container>
