--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,6 +27,22 @@
         <button mat-icon-button>
             <mat-icon>menu</mat-icon>
         </button>
+        <a mat-button [matMenuTriggerFor]="dropdown">
+            Screens
+        </a>
+
+        <mat-menu #dropdown>
+            <button mat-menu-item routerLink="/">Courses</button>
+            <button mat-menu-item routerLink="/about">About</button>
+        </mat-menu>
+        <a mat-button>
+            <mat-icon>person_add</mat-icon>
+            Register
+        </a>
+        <a mat-button>
+            <mat-icon>account_cirle</mat-icon>
+            Login
+        </a>
 
     </mat-toolbar>
 
